@@ -1,18 +1,17 @@
 package kr.starly.astralshop.command.sub;
 
-import kr.starly.astralshop.AstralShop;
+import kr.starly.astralshop.api.AstralShop;
 import kr.starly.astralshop.api.registry.ShopRegistry;
 import kr.starly.astralshop.api.shop.Shop;
 import kr.starly.astralshop.command.SubCommand;
-import kr.starly.astralshop.shop.inventory.admin.impl.EditAdminPaginatedShopInventory;
+import kr.starly.astralshop.message.MessageContext;
+import kr.starly.astralshop.message.MessageType;
+import kr.starly.astralshop.shop.inventory.admin.impl.ShopSettings;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
-import org.bukkit.util.StringUtil;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EditShopCommand implements SubCommand {
 
@@ -27,18 +26,8 @@ public class EditShopCommand implements SubCommand {
     }
 
     @Override
-    public String getEngDescription() {
-        return "Edit a shop";
-    }
-
-    @Override
     public String getKorDescription() {
         return "상점을 편집합니다.";
-    }
-
-    @Override
-    public String getEngUsage() {
-        return "<shop>";
     }
 
     @Override
@@ -55,32 +44,33 @@ public class EditShopCommand implements SubCommand {
 
     @Override
     public void execute(CommandSender sender, String label, String[] args) {
+        MessageContext messageContext = MessageContext.getInstance();
         if (!(sender instanceof Player)) {
-            sender.sendMessage("플레이어만 사용할 수 있는 명령어욤..");
+            messageContext.get(MessageType.ERROR, "noConsole").send(sender);
             return;
         }
 
         Player player = (Player) sender;
 
         if (args.length != 2) {
-            sender.sendMessage("올바른 명령어를 입력해 주세요.");
+            messageContext.get(MessageType.ERROR, "wrongCommand").send(sender);
             return;
         }
 
         String name = args[1];
         Shop shop = shopRegistry.getShop(name);
         if (shop == null) {
-            sender.sendMessage("존재하지 않는 상점입니다.");
+            messageContext.get(MessageType.ERROR, "shopNotExists").send(sender);
             return;
         }
 
-        new EditAdminPaginatedShopInventory(shop).open(player);
+        new ShopSettings(shop).open(player);
     }
 
     @Override
     public List<String> tabComplete(CommandSender sender, String label, String[] args) {
         if (args.length == 2) {
-            return StringUtil.copyPartialMatches(args[1], shopRegistry.getShops().stream().map(Shop::getName).collect(Collectors.toList()), new ArrayList<>());
+            return shopRegistry.getShops().stream().map(Shop::getName).toList();
         }
         return Collections.emptyList();
     }
